--- a/DiceDefend/.vscode/settings.json
+++ b/DiceDefend/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "DiceDefend.sln"
+    "dotnet.defaultSolution": "DiceDefend.slnx"
 }
